# mot

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  moneybird-openapi.snipped.yaml  moneybird-openapi.yaml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  packages.yml  release.yml
docs/: Plugins.md
examples/plugins/: install-hello-plugin.sh  install-python-plugin.sh  python-plugin.py
locales/: en.yml  nl.yml
scripts/: bump-version.sh
src/: api.rs  cmd.rs  config.rs  datetime.rs  event.rs  file.rs  main.rs  model.rs  moneybird.rs  moneybird_traits.rs  plugin.rs  tui.rs  update.rs
src/ui/: autocomplete.rs  color.rs  mod.rs  modal.rs  shortcuts.rs
src/ui/render/: detail.rs  edit.rs  log.rs  mod.rs  plugins.rs  search.rs  table.rs  time_entry_detail.rs  time_entry_edit.rs  time_entry_search.rs  time_entry_table.rs  user_selection.rs
vhs/: mot.tape  snip.sh
~/.config/mot/plugins/hello/: hello.sh  manifest.toml
